# Telokine

./: .gitignore  .wakatime-project  .wakatimeignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
backend/: README.md  pyproject.toml
backend/scripts/: capture_walker_demo.py  test_train_walker.py
backend/telokine/: __init__.py  env.py  reward.py  server.py  sim.py  train.py
backend/tests/: test_env.py  test_sim.py  test_smoke.py
docs/: ARCHITECTURE.md  ROADMAP.md  stardance-devlog-1.md
docs/devlogs/: 01-cube-and-websocket.md  02-slinky-bug-and-motors.md  03-ship-again.md
public/: walker-demo.json
src/: App.tsx  main.tsx  styles.css
src/components/: BlockCanvas.tsx  Inspector.tsx  LibraryPanel.tsx  Palette.tsx  RewardGraph.tsx  StatusBar.tsx  TopBar.tsx  TrainHint.tsx  TrainingOverlay.tsx
src/data/: walkerDemoScene.ts
src/lib/: runtime.ts
src/net/: demoArticulation.ts  demoEnv.ts  demoFrames.ts  demoReplay.ts  demoReward.ts  demoRun.ts  demoTrain.ts  simSocket.ts  trainSocket.ts  trainingControl.ts
src/store/: usePersistenceStore.ts  useProgramStore.ts  useRunStore.ts  useSceneStore.ts  useTrainingStore.ts
src/viewport/: SceneObjectMesh.tsx  Viewport.tsx  types.ts
