[project]
name = "telokine-backend"
version = "0.1.0"
description = "Telokine simulation + RL training backend (MuJoCo + Stable-Baselines3 PPO)"
requires-python = ">=3.11"

# Core server deps — lightweight, installed by `uv sync`.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pydantic>=2",
    "numpy>=1.26",
]

# Physics only — needed from step 2 onwards. MuJoCo ships self-contained
# manylinux wheels (bundles the native lib), so no system packages required.
[project.optional-dependencies]
sim = ["mujoco>=3.1"]

# Full learning stack — installed from step 3 (gymnasium) / step 4 (RL).
ml = [
    "mujoco>=3.1",
    "gymnasium>=1.0",
    "stable-baselines3>=2.3",
    "torch>=2.2",
]

# Dev/test tools.
[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The import package is `telokine`, not `telokine_backend`.
[tool.hatch.build.targets.wheel]
packages = ["telokine"]
