[project]
name = "telokine-backend"
version = "0.1.0"
description = "Telokine simulation + RL training backend (MuJoCo + Stable-Baselines3 PPO)"
requires-python = ">=3.11"

# Core server deps — lightweight, installed by `uv sync`.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pydantic>=2",
    "numpy>=1.26",
]

# Physics + env interface — needed from step 2 (physics) and step 3 (agent).
# MuJoCo ships self-contained manylinux wheels (bundles the native lib), and
# gymnasium is pure-python, so no system packages are required.
[project.optional-dependencies]
sim = [
    "mujoco>=3.1",
    "gymnasium>=1.0",
]

# Full learning stack — installed from step 4 (RL with PPO).
# torch is pinned to a stable CUDA 12.x build and fetched from PyTorch's own
# index (see [tool.uv] below), which serves the large CUDA wheels more
# reliably than PyPI.
ml = [
    "mujoco>=3.1",
    "gymnasium>=1.0",
    "stable-baselines3>=2.3",
    "torch>=2.4,<2.6",
]

# Dev/test tools.
[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.uv]
# PyTorch CUDA 12.1 wheels (manylinux). uv will fall back to a CPU build if no
# CUDA-capable build resolves for this platform.
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The import package is `telokine`, not `telokine_backend`.
[tool.hatch.build.targets.wheel]
packages = ["telokine"]
